syntax = "proto3";

package protocol;

option java_package = "org.tron.protos.contract"; //Specify the name of the package that generated the Java file
//option java_outer_classname = "UnfreezeBalanceContract"; //Specify the class name of the generated Java file
option go_package = "github.com/tronprotocol/grpc-gateway/core";

import "core/contract/common.proto";

message UnfreezeBalanceContract {
    bytes owner_address = 1;

    ResourceCode resource = 10;
    bytes receiver_address = 15;
}